Added contact and info page

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 This is the Admin creating an index.html file for Tom and Jerry
 Hi Tom I'm adding contact info to this project and Pls give me time 
+How are you today? Tell me something new
